namespace Formless.Core.Animations
{
    public static class AnimationConstants
    {
        public const string IS_MOVING = "IsMoving";
        public const string IS_DIE = "IsDie";
        public const string BASIC_ATTACK = "BasicAttack";
        public const string STRONG_ATTACK = "StrongAttack";
        public const string SPECIAL_ATTACK = "SpecialAttack";
        public const string HURT = "Hurt";
    }
}

